--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ locale                   : "en-US" #"es-MX" # "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Manuel Alejandro Matías Astorga Data Science Portfolio"
 title_separator          : "-"
-subtitle                 : Version 1.0
+subtitle                 : by Manuel Alejandro Matías Astorga
 name                     : "Manuel Alejandro Matías Astorga"
 description              : "A showcase of my Data Science and Machine Learning projects."
 url                      : "https://alexmatiasas.github.io"
 baseurl                  : "/"
 repository               : "https://github.com/alexmatiasas/alexmatiasas.github.io/"
 teaser                   : "/assets/images/teaser.jpg"
-logo                     : "/assets/images/logo.png"
+logo                     : "/assets/images/logo.svg"
 masthead_title           : "Data Science Portfolio"
 breadcrumbs              : true
 words_per_minute         : 250
@@ -67,7 +67,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-  hide                   : # true, false (default)
+  hide                   : true # true, false (default)
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -127,21 +127,35 @@ author:
       url: "/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/alexmatiasas"
+      # url: "https://x.com/alexmatiasas"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/alexmatiasas"
+    - label: "GitLab"
+      icon: "fab fa-fw fa-gitlab"
+      url: https://gitlab.com/alexmatiasas
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
-
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: https://www.linkedin.com/in/alexmatiasastorga/
+    - label: "Kaggle"
+      icon: "fab fa-fw fa-kaggle"
+      url: https://www.kaggle.com/alejandromatias
 
 # Site Footer
 footer:
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      # url: "mailto: alejandromatiasastorga@gmail.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-globe"
+      # url: "/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
