fixed contact formulary
fixed contact formulary

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main  # O la rama principal donde esté tu web
+      - main  
 
 jobs:
   build:
