fixed workflow build
fixed worflow build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,76 +1,43 @@
-# name: build
-
-# on:
-#   push:
-#     branches:
-#       - master
-#   workflow_dispatch: {}
-#   repository_dispatch: {}
-
-# jobs:
-#   build:
-#     if: github.repository == 'mmistakes/minimal-mistakes'
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v4
-#       with:
-#         fetch-depth: 0
-
-#     - uses: ruby/setup-ruby@v1
-#       with:
-#         ruby-version: '3.2'
-#     - name: Setup cache for Bundler
-#       id: cache
-#       uses: actions/cache@v4
-#       with:
-#         path: |
-#           docs/Gemfile.lock
-#           docs/vendor/bundle
-#         key: ${{ runner.os }}-bundler-${{ hashFiles('docs/Gemfile') }}
-#         restore-keys: |
-#           ${{ runner.os }}-bundler-
-
-#     - name: Install - Bundler
-#       env:
-#         MAKE: make -j2
-#       working-directory: docs/
-#       run: |
-#         bundle config set path vendor/bundle
-#         bundle install --jobs=4 --retry=3
-#         bundle clean
-
-#     - name: Install dependencies
-#       run: |
-#         echo "FORMSPREE_FORM_ID=$FORMSPREE_FORM_ID" >> .env
-#         bundle install
-
-#     - name: Update Algolia index
-#       working-directory: docs/
-#       run: bundle exec jekyll algolia push
-#       env:
-#         ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-#       continue-on-error: true
-
-name: Build and Deploy
+name: build
 
 on:
   push:
     branches:
-      - main  
+      - master
+  workflow_dispatch: {}
+  repository_dispatch: {}
 
 jobs:
   build:
+    if: github.repository == 'mmistakes/minimal-mistakes'
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3 
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '2.7'
-          bundler-cache: true
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.2'
+    - name: Setup cache for Bundler
+      id: cache
+      uses: actions/cache@v4
+      with:
+        path: |
+          docs/Gemfile.lock
+          docs/vendor/bundle
+        key: ${{ runner.os }}-bundler-${{ hashFiles('docs/Gemfile') }}
+        restore-keys: |
+          ${{ runner.os }}-bundler-
+
+    - name: Install - Bundler
+      env:
+        MAKE: make -j2
+      working-directory: docs/
+      run: |
+        bundle config set path vendor/bundle
+        bundle install --jobs=4 --retry=3
+        bundle clean
 
       - name: Install dependencies
         env:
@@ -79,11 +46,46 @@ jobs:
           echo "FORMSPREE_FORM_ID=$FORMSPREE_FORM_ID" >> .env
           bundle install
 
-      - name: Build Jekyll site
-        run: bundle exec jekyll build
+    - name: Update Algolia index
+      working-directory: docs/
+      run: bundle exec jekyll algolia push
+      env:
+        ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+      continue-on-error: true
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4  
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+# name: Build and Deploy
+
+# on:
+#   push:
+#     branches:
+#       - main  
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3 
+
+#       - name: Setup Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: '2.7'
+#           bundler-cache: true
+
+#       - name: Install dependencies
+#         env:
+#           FORMSPREE_FORM_ID: ${{ secrets.FORMSPREE_FORM_ID }} 
+#         run: |
+#           echo "FORMSPREE_FORM_ID=$FORMSPREE_FORM_ID" >> .env
+#           bundle install
+
+#       - name: Build Jekyll site
+#         run: bundle exec jekyll build
+
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v4  
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./_site
