--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch: {}
   repository_dispatch: {}
 
@@ -39,15 +39,15 @@ jobs:
         bundle install --jobs=4 --retry=3
         bundle clean
 
-    # - name: Install dependencies
-    #   env:
-    #     FORMSPREE_FORM_ID: ${{ secrets.FORMSPREE_FORM_ID }} 
-    #   run: |
-    #     echo "FORMSPREE_FORM_ID=$FORMSPREE_FORM_ID" >> .env
-    #     bundle install
+    - name: Install dependencies
+      env:
+        FORMSPREE_FORM_ID: ${{ secrets.FORMSPREE_FORM_ID }} 
+      run: |
+        echo "FORMSPREE_FORM_ID=$FORMSPREE_FORM_ID" >> .env
+        bundle install
 
-    # - name: Build Jekyll site
-    #   run: bundle exec jekyll build
+    - name: Build Jekyll site
+      run: bundle exec jekyll build
 
     - name: Update Algolia index
       working-directory: docs/
