--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ atom_feed:
   hide                   : true # true, false (default)
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : # lunr (default), algolia, google
+search_provider          : lunr # lunr (default), algolia, google
 lunr:
   search_within_pages    : true # true, false (default)
 algolia:
@@ -95,13 +95,19 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : # Open Graph/Twitter default site image
+og_image                 : /assets/images/teaser.jpg # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  type: Person
+  name: "Manuel Alejandro Matías Astorga"
+  links:
+    - "https://www.linkedin.com/in/alexmatiasastorga/"
+    - "https://github.com/alexmatiasas"
+    - "https://www.kaggle.com/alejandromatias"
+  # type                   : # Person or Organization (defaults to Person)
+  # name                   : # If the user or organization name differs from the site's name
+  # links: # An array of links to social media profiles
 
 # Analytics
 analytics:
@@ -116,7 +122,7 @@ author:
   name             : "Manuel Alejandro Matías Astorga"
   avatar           : "/assets/images/profile_photo.jpg"
   bio              : "Data Scientist and Machine Learning Engineer."
-  location         : "Mexico city, Mexico"
+  location         : "Mexico City, Mexico"
   email            : 
   links:
     - label: "Email"
@@ -128,15 +134,15 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://x.com/alexmatiasas"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/alexmatiasas"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      url: https://gitlab.com/alexmatiasas
+    # - label: "GitLab"
+    #   icon: "fab fa-fw fa-gitlab"
+      # url: https://gitlab.com/alexmatiasas
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -152,27 +158,27 @@ footer:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
-      # url: "mailto: alejandromatiasastorga@gmail.com"
+      url: "mailto: alejandromatiasastorga@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-globe"
-      # url: "/"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      url: "/"
+    # - label: "Twitter"
+    #   icon: "fab fa-fw fa-twitter-square"
       # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/alexmatiasas"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      url: https://gitlab.com/alexmatiasas
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
+    # - label: "GitLab"
+    #   icon: "fab fa-fw fa-gitlab"
+      # url: https://gitlab.com/alexmatiasas
+    # - label: "Bitbucket"
+    #   icon: "fab fa-fw fa-bitbucket"
       # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
       # url:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
@@ -356,7 +362,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
       toc: true
