--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US" #"es-MX" # "en-US"
-rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
+rtl                      : false # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Manuel Alejandro Matías Astorga Data Science Portfolio"
 title_separator          : "-"
 subtitle                 : by Manuel Alejandro Matías Astorga
@@ -31,7 +31,7 @@ masthead_title           : "Data Science Portfolio"
 breadcrumbs              : true
 words_per_minute         : 250
 enable_copy_code_button  : true
-copyright                : # "copyright" name, defaults to site.title
+copyright                : " " # "copyright" name, defaults to site.title
 copyright_url            : # "copyright" URL, defaults to site.url
 comments:
   provider               : # "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -70,7 +70,7 @@ atom_feed:
   hide                   : true # true, false (default)
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : lunr # lunr (default), algolia, google
+search_provider          : "lunr" # lunr (default), algolia, google
 lunr:
   search_within_pages    : true # true, false (default)
 algolia:
@@ -123,7 +123,7 @@ author:
   avatar           : "/assets/images/profile_photo.jpg"
   bio              : "Data Scientist and Machine Learning Engineer."
   location         : "Mexico City, Mexico"
-  email            : 
+  email            : ""
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
