--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,16 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            docs/Gemfile.lock
-            docs/vendor/bundle
-          key: ${{ runner.os }}-bundler-${{ hashFiles('docs/Gemfile') }}
+            ./Gemfile.lock
+            ./vendor/bundle
+          key: ${{ runner.os }}-bundler-${{ hashFiles('./Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-bundler-
 
       - name: Install - Bundler
         env:
           MAKE: make -j2
-        working-directory: docs/
+        working-directory: ./
         run: |
           bundle config set path vendor/bundle
           bundle install --jobs=4 --retry=3
